# SWIRL

./: .gitignore  CMakeLists.txt  README.md
cmake/tpl/: SetupTPL.cmake
examples/: Drawing1.exo  LineLoadTest.py  SWIRL.py  example_space_frame.exo
src/: CMakeLists.txt  Logger.h  Makefile  Parameters.h  Particles.h  SWIRL.h  SWIRL.py  SWIRL_API.cpp  SpatialHash.h  Structure.h  WindField.h
tests/: CMakeLists.txt  Parameters_tests.cpp  SpatialHash_tests.cpp  WindField_tests.cpp
